fix disappearing by adding empty blurred box shadow (don't know how it works)

--- a/src/components/FlipCard/index.css
+++ b/src/components/FlipCard/index.css
@@ -38,6 +38,7 @@
 
 .FlipCard-content[flipped] {
   transform: rotateY(180deg) translateY(var(--translateY));
+  box-shadow: 0px 0px 1px 0px transparent;
 }
 
 .FlipCard-content:active,
